# Ball-following-tortoise-bot

./: .gitignore  README.md  cmd_vel_log.csv  frames_2025-07-22_15.52.00.gv
src/follow_ball/: package.xml  setup.cfg  setup.py
src/follow_ball/follow_ball/: detect_ball.py
src/laser/: package.xml  setup.py
src/laser/laser/: closest_distance.py
src/my_robot_description/: package.xml  setup.py
src/my_robot_description/launch/: gazebo_with_obstacles.launch.py  robot_gazebo.launch.py  world_with_ball.launch.py
src/my_robot_description/sdf/: my_robot.sdf  my_robot.urdf
src/my_robot_description/worlds/: empty_world_with_obstacles.sdf  world_with_ball.sdf
src/teleop_memory/: package.xml  setup.cfg  setup.py
src/teleop_memory/teleop_memory/: record_cmdvel.py  replay_cmdvel.py
